x264enc: propagate flow return back to base class and upstream

https://bugzilla.gnome.org/show_bug.cgi?id=705425