ext/x264/gstx264enc.c
@@ -1739,7 +1739,7 @@ gst_x264_enc_encode_frame (GstX264Enc * encoder, x264_picture_t * pic_in,
 out:
   if (frame) {
     gst_x264_enc_dequeue_frame (encoder, frame);
-    gst_video_encoder_finish_frame (GST_VIDEO_ENCODER (encoder), frame);
+    ret = gst_video_encoder_finish_frame (GST_VIDEO_ENCODER (encoder), frame);
   }
 
   return ret;
